# KasperskySafeBoard

./: CMakeLists.txt  Common.h
ClientPart/: Client.cpp  Client.h  ResultsProcessor.cpp  ResultsProcessor.h  clientMain.cpp
ServerPart/: Kaspersky.cpp  Kaspersky.h  Server.cpp  Server.h  serverMain.cpp
